--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -385,10 +385,10 @@ List supported output formats, one per line.
 .RS
 .RE
 .TP
-.B \f[C]\-\-list\-extensions\f[]
+.B \f[C]\-\-list\-extensions\f[][\f[C]=\f[]\f[I]FORMAT\f[]]
 List supported Markdown extensions, one per line, followed by a
 \f[C]+\f[] or \f[C]\-\f[] indicating whether it is enabled by default in
-pandoc\[aq]s Markdown.
+\f[I]FORMAT\f[] (defaulting to pandoc\[aq]s Markdown).
 .RS
 .RE
 .TP
